# iwishthisisthelastone

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/string/: string_.c  string_.h
libs/algorithms/string/tasks/: areWordsOrdered.h  changeNumbersToSpaces.h  changeW1ToW2.h  countPalindromes.h  everyWordReversed.h  getLastWordFromRow1ThatInRow2.h  hasEqualWordsInString.h  isTwoWordsWithSameLettersInString.h  mixStrings.h  printEveryWordReversed.h  printWordBeforeFirstWordWithA.h  printWordsInReversedOrder.h  removeAdjacentEqualLetters.h  removeNonLetters.h  reverseWordsOrder.h  reversedNumbersInBeginOfWordAndNormalLettersInEndOfWord.h  tasks.c  tasks.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  test_matrix.c  test_matrix.h  test_matrix_functions.c  test_matrix_functions.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
